--- a/lefloch_kennedy_sabr_fdm_transform_short.tex
+++ b/lefloch_kennedy_sabr_fdm_transform_short.tex
@@ -104,23 +104,23 @@ For some extreme SABR parameters, the change of variable allows high accuracy wi
 \hline
 \multicolumn{5}{|c|}{Uniform discretization of $Q$ in $F$} \\ \hline
 $F_{max}$ & Points & Steps & Price & Vol \\
-5 & 100 & 10 & 0.64082 & 85.118  \\
-50 & 100 & 10 & 0.78764 & 155.683\\
-500 & 1000 & 10 & 0.79780 & 191.493 \\
-5000 & 10000 & 160 & 0.79835 & 196.926\\
+5 & 10 & 5 & 0.65010 & 87.205  \\
+50 & 100 & 10 & 0.78769 & 155.773\\
+500 & 1000 & 20 & 0.79782 & 191.658 \\
+5000 & 10000 & 160 & 0.79835 & 196.930\\
 \hline
 \end{tabular}
 \begin{tabular}{|c|r|r|r|r|}
 \hline
 \multicolumn{5}{|c|}{Discretization of $\theta$ in $z$} \\ \hline
 $n_{sd}$ & Points & Steps & Price & Vol\\
-3 & 10 & 10 & 0.79819 & 195.243\\
-3 & 100 & 10 & 0.79845 & 198.135\\
-4 & 100 & 10 & 0.79845 & 198.130\\
-10 & 10000 & 160 & 0.79845 & 198.130\\
+3 & 10 & 5 & 0.79848 & 198.504\\
+3 & 100 & 10 & 0.79853 & 199.148\\
+4 & 100 & 20 & 0.79847 & 198.338\\
+10 & 10000 & 160 & 0.79845 & 198.134\\
 \hline
 \end{tabular}
-\caption{\label{table:discretization}Price by TR-BDF3 without and with variable change for extreme SABR parameters: $\alpha=100\%, \beta=0.30, \rho=90\%, \nu=100\%, \tau_{ex}=10, f=1$}
+\caption{\label{table:discretization}Price by the Lawson-Swayne method without and with variable change for extreme SABR parameters: $\alpha=100\%, \beta=0.30, \rho=90\%, \nu=100\%, \tau_{ex}=10, f=1$}
 \end{center}
 \end{table} 
 The number of points used can not be too small: the forward should not be on the boundary. This restriction is much stricter for the uniform discretization of $Q$ than for the discretization in the changed variable $\theta$.
@@ -163,14 +163,35 @@ The probability accumulated at the boundaries is discretized as:
 \frac{\partial P_R}{\partial T} (T) &= \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(T)\theta(z_J, T) 
 \end{align}
 
+\subsection{Moment Preserving Implicit Euler}
+\begin{subequations}
+\begin{align}
+\theta_j^{n+1}-\theta_j^n &= \delta \mathcal{L}_{j}^{n+1} \theta_j^{n+1} \\
+P_L (t_{n+1}) - P_L (t_{n}) &= \delta \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+1})\theta_1^{n+1} \\
+P_R (t_{n+1}) -  P_R (t_{n}) &= \delta \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+1})\theta_J^{n+1}
+\end{align}
+\end{subequations}
+for $j=1,...,J$ and $n=0,...,N-1$.
 
+\subsection{Moment Preserving Crank-Nicolson}
+\begin{subequations}
+\begin{align}\label{eqn_cn_1}
+\theta_j^{n+1}-\theta_j^n &= \frac{\delta}{2} \left( \mathcal{L}_{j}^{n+1}\theta_j^{n+1} + \mathcal{L}_{j}^{n}\theta_j^{n} \right) \\
+P_L (t_{n+1})- P_L (t_{n}) &= \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\left(\hat{E}_1(t_{n+1})\theta_1^{n+1}+\hat{E}_1(t_{n})\theta_1^{n} \right)\\
+P_R (t_{n+1})-P_R (t_{n}) &=  \frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\left(\hat{E}_J(t_{n+1})\theta_J^{n+1}+\hat{E}_J(t_{n})\theta_J^{n} \right)
+\end{align}
+\end{subequations}
+for $j=1,...,J$ and $n=0,...,N-1$.
 
 \section{Crank-Nicolson Oscillations with SABR}\label{section_cn}
 \begin{figure}[htb]
   \begin{center}  
-    \includegraphics[width=12cm]{density_hagan_cn_500_40.eps}
+      \subfigure[PDE in $Q$ with 40 time steps and $F_{max}=5$]{\label{fig:density_hagan_cn_500_40}
+\includegraphics[width=7cm]{density_hagan_cn_500_40s.eps}}
+  \subfigure[PDE in $\theta$ with 80 time steps and $n_{sd}=4$]{\label{fig:density_hagan_cn_500_80}
+\includegraphics[width=7cm]{density_hagan_cn_theta_500_80s.eps}}
   \end{center}
-     \caption{\label{fig:density_hagan_cn_500_40} Probability density in Hagan PDE discretised with Crank-Nicolson with 500 points and 40 time-steps. $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, \tau_{ex}=1$}
+     \caption{\label{fig:density_hagan_cn_500_40} Probability density in Hagan PDE discretised with Crank-Nicolson with 500 points. $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, \tau_{ex}=1$}
 \end{figure}
 
 We use the same parameters as the example of negative density with the standard SABR formula in \citep{hagan2013arbitrage}: $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%$ and forward $f=1$ at $\tau_{ex}=1$, a relatively fine discretisation in the rate dimension (500 points, that is $h = 0.01005$) and large time-steps (40 steps, that is $\delta=0.025$). \cite{hagan2013arbitrage} recommend between 200 and 500 points and 30 to 100 time-steps.
@@ -197,24 +218,27 @@ In our example, in Figures \ref{fig:density_hagan_cn_500_40} and \ref{fig:densit
 We will focus our analysis on the PDE in $\theta$, but similar conclusion can be drawn for the PDE in $Q$.
 
 \subsection{Rannacher}
-A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists of introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed. 
+A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists of introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed.
 The SABR density discretisation will still be moment preserving if we discretise the Euler half steps as:
 \begin{subequations}\label{eqn_euler_1}
 \begin{align}
 \theta_j^{n+\frac{1}{2}}-\theta_j^n &= \frac{\delta}{2} \mathcal{L}_{j}^{n+\frac{1}{2}} \theta_j^{n+\frac{1}{2}} \\
-P_L (t_{n+\frac{1}{2}}) - P_L (t_{n}) &=   \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+1})\theta_1^{n+\frac{1}{2}} \\
-P_R (t_{n+\frac{1}{2}}) -  P_R (t_{n}) &=\frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+1})\theta_J^{n+\frac{1}{2}}
+P_L (t_{n+\frac{1}{2}}) - P_L (t_{n}) &=   \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+\frac{1}{2}})\theta_1^{n+\frac{1}{2}} \\
+P_R (t_{n+\frac{1}{2}}) -  P_R (t_{n}) &=\frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+\frac{1}{2}})\theta_J^{n+\frac{1}{2}}
 \end{align}
 \end{subequations}
-for $j=1,...,J$ and $n = 0, \frac{1}{2}, 1, \frac{3}{2}$. The next steps are Crank-Nicolson:
+for $j=1,...,J$ and $n = 0, \frac{1}{2}, 1, \frac{3}{2}$. The next steps are Crank-Nicolson for $n=2,...,N-1$.
+
+\subsection{BDF2}
+The second order backward difference scheme (BDF2) is A-stable and L-stable multistep implicit scheme and will therefore damp any oscillation very quickly. Multisteps schemes have however severe limitations: instabilities will occur for sudden changes in the system variables, and initialization by another method is needed for the first steps. For example they can't be applied to linear complimentary problems like the pricing of American options through the discretization of the Black-Scholes PDE \citep{floc2013tr}. Those issues don't arise with the SABR density PDE. The first moments will be preserved with the following discretization:
 \begin{subequations}
-\begin{align}\label{eqn_cn_1}
-\theta_j^{n+1}-\theta_j^n &= \frac{\delta}{2} \left( \mathcal{L}_{j}^{n+1}\theta_j^{n+1} + \mathcal{L}_{j}^{n}\theta_j^{n} \right) \\
-P_L (t_{n+1})- P_L (t_{n}) &= \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\left(\hat{E}_1(t_{n+1})\theta_1^{n+1}+\hat{E}_1(t_{n})\theta_1^{n} \right)\\
-P_R (t_{n+1})-P_R (t_{n}) &=  \frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\left(\hat{E}_J(t_{n+1})\theta_J^{n+1}+\hat{E}_J(t_{n})\theta_J^{n} \right)
+\begin{align}
+3\theta_j^{n+2}-4\theta_j^{n+1}+\theta_j^n &= 2 \delta \mathcal{L}_{j}^{n+2} \theta_j^{n+2} \\
+3 P_L (t_{n+2}) - 4 P_L (t_{n+1}) + P_L (t_{n}) &=2 \delta \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+2})\theta_1^{n+2} \\
+3 P_R (t_{n+2}) - 4 P_R (t_{n+1}) +  P_R (t_{n}) &= 2\delta \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+2})\theta_J^{n+2}
 \end{align}
 \end{subequations}
-for $j=1,...,J$ and $n=2,...,N-1$.
+for $j=1,...,J$ and $n=0,...,N-2$. Implicit Euler is used to compute $\theta_j^1, P_L^1, P_R^1$ at $n=0$.
 
 \subsection{Implicit Richardson Extrapolation}
 A simple Richardson extrapolation in time \citep{richardson1911approximate} on implicit Euler will also provide a nearly order-2 scheme in time, keeping strong damping properties of the implicit Euler scheme at the cost of increased computational load: the implicit Euler scheme (equations \ref{eqn_euler_1}) is evaluated with $\frac{\delta}{2}$ and $\delta$. In practice it is around twice as slow as Crank-Nicolson. At $T=N\delta=\tau_{ex}$, we apply:
@@ -291,7 +315,7 @@ P_R(t_{n+1}) &= \frac{1}{2-\alpha}\left(\frac{1}{\alpha} P_R(t_{n+\alpha}) - \fr
 
 The weight $\alpha$ can be chosen to match Crank-Nicolson ($\alpha=\frac{1}{2}$) or to have proportional Jacobians ($\alpha = 2-\sqrt{2}$). The later provides optimal stability \citep{dharmaraja2009optimal}. 
 
-This can be extended to three-stages, with two stages of the trapezoidal rule and one stage of third order backward difference scheme (BDF3) as in \citep{bathe2005composite}, resulting in a method with even stronger damping properties (TR-BDF3):
+This can be extended to three-stages, with two stages of the trapezoidal rule and one stage of third order backward difference scheme (BDF3) as in \citep{bathe2005composite}, resulting in a method with even stronger damping properties that we will name "Bathe":
 \begin{subequations}
 \begin{align}
 \theta_j^{n+\frac{1}{3}} &= \theta_j^n + \frac{\delta}{6}\left(\mathcal{L}_j^{n} \theta_j^n+\mathcal{L}_j^{n+\frac{1}{3}} \theta_j^{n+\frac{1}{3}}\right)\\
@@ -299,11 +323,6 @@ This can be extended to three-stages, with two stages of the trapezoidal rule an
 \theta_j^{n+1} &= \frac{1}{11}\left( 18  \theta_j^{n+\frac{2}{3}} - 9 \theta_j^{n+\frac{1}{3}} + 2 \theta_j^n + 2\delta\mathcal{L}_j^{n+1} \theta_j^{n+1}\right)
 \end{align}
 \end{subequations}
-
-\subsection{Smoothing before Crank-Nicolson}
-Similarly to Rannacher idea, we could use Lawson-Morris-Gourlay for the first few timesteps in order to dampen the oscillations before applying Crank-Nicolson. This ensures an overall order-2 accuracy, even with a low number of time-steps. TR-BDF2 and TR-BDF3 fit particularly well as the first stages are a weighted Crank-Nicolson. So one could stop doing the BDF2 (respectively BDF3) stages when the solution is sufficiently smooth. 
-
-We found by experimentation that Crank-Nicolson, dampened by 4 initial steps of TR-BDF2 or Lawson-Swayne was very efficient, but we are less comfortable recommending such a hybrid scheme without further analysis.
 
 \subsection{Optimising for Performance}
 The function $M(F,T)$ needs to be computed for every grid point $\left(F_j, t_n\right)$. The performance of the overall algorithm can be greatly improved by minimising the calls to the \texttt{pow} and \texttt{exp} functions as those are expensive. The quantities $\frac{1}{2} \alpha^2 (1+2\rho\nu z+ \nu^2 z^2) C^2(F)$ and $\rho\nu\alpha\Gamma$ are constant in time and can be thus be cached between time-steps. A further improvement is to decompose $t_{n+1}$ as $t_{n}+\delta$, then 
@@ -333,8 +352,8 @@ For multi-stage schemes, it is also possible to consider $M$ as piecewise consta
   \end{center}
      \caption{\label{fig:density_hagan_lmg2_500_10} Probability density in Hagan PDE using a total of 5 time-steps}
 \end{figure}
-With the same parameters as in section \ref{section_cn}, Figure \ref{fig:density_hagan_ran_500_5_0} shows a smooth positive probability density using only a total of 5 time-steps when Rannacher smoothing is applied to Crank-Nicolson. The density computed using second or third order Lawson-Morris-Gourlay (LMG2, LMG3), Lawson-Swayne (LS), TR-BDF2 or Richardson extrapolation on implicit Euler would look very similar. Figures \ref{fig:density_hagan_ran_500_5_5} and \ref{fig:density_hagan_lmg3_500_5_5} show no apparent oscillations in the first steps.
-In contrast, Crank-Nicolson had strong oscillations visible at $T=\tau_{ex}$ with 40 time steps.
+With the same parameters as in section \ref{section_cn}, Figure \ref{fig:density_hagan_ran_500_5_0} shows a smooth positive probability density using only a total of 5 time-steps when Rannacher smoothing is applied to Crank-Nicolson. The density computed using second or third order Lawson-Morris-Gourlay (LMG2, LMG3), BDF2, Lawson-Swayne (LS), TR-BDF2 or Richardson extrapolation on implicit Euler (RE) would look very similar. Figure \ref{fig:density_hagan_ran_500_5_5} show no apparent oscillations in the first steps for the Rannacher scheme. BDF2 and LMG2 would look the same.  Lawson-Swayne shows a nearly imperceptible oscillation at the first step, and no more afterwards (Figure \ref{fig:density_hagan_lmg3_500_5_5}. TR-BDF2 and Bathe schemes behave similarly.
+In contrast, Crank-Nicolson had strong oscillations visible at $T=\tau_{ex}$ with 40 time steps for the PDE in $Q$ and even stronger oscillations with 80 time steps for the PDE in $\theta$.
 
 \subsection{Performance}
 \subsubsection{Hagan Example}
@@ -343,15 +362,17 @@ With the same parameters as in section \ref{section_cn}, we look at the maximum 
 \begin{figure}[htb]
   \begin{center}  
   \subfigure[Accuracy vs. number of time steps]{\label{fig:perf_hagan_500_steps}
-  \includegraphics[width=7cm]{perf_theta_hagan_500_steps.eps}}
+  \includegraphics[width=7cm]{perf_theta_hagan_500_steps_all.eps}}
   \subfigure[Accuracy vs. time]{
-\includegraphics[width=7cm]{perf_theta_hagan_500_time.eps}}
+\includegraphics[width=7cm]{perf_theta_hagan_500_time_all.eps}}
     \end{center}
      \caption{\label{fig:perf_hagan_500} Performance on Hagan example}
 \end{figure}
 
 %show convergence graph
-Other tests we performed indicate that the implied volatility maximum error or even the at-the-money implied volatility error would lead to similar conclusions. Furthermore, a Black implied volatility with an absolute error under 0.1\% was achieved with only 2 time steps for LMG3, Lawson-Swayne and TR-BDF2, 5 time steps for LMG2, and 10 steps for RAN. Lawson-Swayne is the most efficient scheme on this problem, closely followed by TR-BDF2, Rannacher and LMG3.
+Other tests we performed indicate that the implied volatility maximum error or even the at-the-money implied volatility error would lead to similar conclusions. Furthermore, a Black implied volatility with an absolute error under 0.1\% was achieved with only 3 time-steps for Bathe, 6 for Lawson-Swayne and TR-BDF2 Bathe, 10 for LMG2, and 12 for BDF2 and RAN. Lawson-Swayne is the most efficient scheme on this problem, closely followed by TR-BDF2, Rannacher and BDF2.
+
+Higher order schemes like BDF3 or LMG3 were found to be no better performing than their second order variation on this problem.
 
 \subsubsection{Andreasen-Huge Example}
 We consider the SABR parameters used in \citep{andreasen2011zabr}: $\alpha=0.0873, \beta=0.7, \rho=-0.48, \nu=0.47$ with a forward of $f=0.025$ and a maturity $\tau_{ex}=10.0$ and look at the maximum error in implied volatility between $0.2f$ and $2f$.
@@ -359,9 +380,9 @@ We consider the SABR parameters used in \citep{andreasen2011zabr}: $\alpha=0.087
 \begin{figure}[htb]
   \begin{center}  
   \subfigure[Accuracy vs. number of time steps]{\label{fig:perf_ah_500_steps}
-  \includegraphics[width=7cm]{perf_vol_theta_ah_500_steps.eps}}
+  \includegraphics[width=7cm]{perf_vol_theta_ah_500_steps_all.eps}}
   \subfigure[Accuracy vs. time]{
-\includegraphics[width=7cm]{perf_vol_theta_ah_500_time.eps}}
+\includegraphics[width=7cm]{perf_vol_theta_ah_500_time_all.eps}}
     \end{center}
      \caption{\label{fig:perf_ah_500} Performance on Andreasen-Huge example}
 \end{figure}
@@ -369,10 +390,10 @@ We consider the SABR parameters used in \citep{andreasen2011zabr}: $\alpha=0.087
 
 %show convergence graph
 
-Only 3 time-steps are enough with LS and TR-BDF3 for a Black implied volatility accuracy better than 0.1\%, 4 for TR-BDF2 and LMG3, 5 for LMG2, 15 for RAN. 
+Only 3 time-steps are enough to achieve a Black implied volatility accuracy better than 0.1\%  with Lawson-Swayne and Bathe schemes, 4 time-steps for TR-BDF2, 5 for LMG2, 12 for RAN and BDF2.
 
 \section{Conclusion}
-It is possible to accurately compute option prices under the arbitrage free SABR approach with very few time-steps, even for long maturities. The Rannacher smoothing is a particularly simple and efficient way to improve accuracy significantly compared to Crank-Nicolson on this problem. Other schemes such as TR-BDF2 or Lawson-Swayne can be even more efficient. In our experiments TR-BDF2 and Lawson-Swayne were robust and had similar stability and convergence properties.
+It is possible to accurately compute option prices under the arbitrage free SABR approach with very few time-steps, even for long maturities. The Rannacher smoothing is a particularly simple and efficient way to improve accuracy significantly compared to Crank-Nicolson on this problem. BDF2 is simpler still and more efficient. Other schemes such as TR-BDF2 or Lawson-Swayne can further increase efficiency. In our experiments TR-BDF2 and Lawson-Swayne were robust and had similar stability and convergence properties.
 
 
 Thus, with a careful choice of finite difference scheme, \citep{hagan2013arbitrage} is particularly competitive to the one step finite difference approach of \citep{andreasen2011zabr}.
@@ -510,32 +531,19 @@ end
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 Scheme & ATM price & $\theta(0)$ & $P_L$ & $P_R$\\
-CN & 0.146401812646 & 68.433173016051 & 0.036626203406 & 0.000009377633\\
-RAN & 0.149506715205 & 0.485148325440 & 0.036827183880 & 0.000011560619\\
-RE & 0.149621279303 & 0.483887398092 & 0.036808451411 & 0.000004545780\\
-LMG2 & 0.149564709969 & 0.485131123139 & 0.036971755922 & 0.000004561707\\
-LMG3 & 0.149614813851 & 0.484413058295 & 0.036794424330 & 0.000007793877\\
-TRBDF2 & 0.149639390016 & 0.484017198494 & 0.036700345733 & 0.000008580444\\
-TRBDF3 & 0.149623393527 & 0.484271973888 & 0.036760496530 & 0.000007980928\\
-LS & 0.149639010577 & 0.484020689536 & 0.036701144774 & 0.000008583913\\
+CN & 0.156536999912 & -75.391631075100 & 0.036151920718 & 0.000013551980\\
+RAN & 0.149164032279 & 0.486588975088 & 0.037035726447 & 0.000022398224\\
+BDF2 & 0.149367146751 & 0.478480554725 & 0.036571170375 & 0.000034872631\\
+RE & 0.149620613592 & 0.482424676955 & 0.036971313630 & -0.000001793511\\
+LMG2 & 0.149447020543 & 0.486727660232 & 0.037356585469 & -0.000003337903\\
+LS & 0.149699973996 & 0.482422521405 & 0.036472664324 & 0.000010671927\\
+TRBDF2 & 0.149701545689 & 0.482401023656 & 0.036469263805 & 0.000010658861\\
+Bathe & 0.149629009401 & 0.486420051293 & 0.036725562889 & 0.000008443878\\
 \hline
 \end{tabular}
-\caption{Sample values using 500 points and 10 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, n_{sd}=4, \delta=0.1, h=0.012018637349$}
+\caption{Sample values using 500 points and 5 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, n_{sd}=4, \delta=0.2, h=0.012018637349$}
 \end{center}
 \end{table} 
-Checking the moments at every step is very useful way to validate a scheme's implementation in code. To support further validation we recorded specific values from our implementations as reference. The TR-BDF2 is using a value of $\alpha=2-\sqrt{2}$ whilst the RAN scheme is using Rannacher time-stepping for the first two full time-steps.
-%\section{TR-BDF2 vs TR-BDF3}
-%\subsection{First 4 steps}
-%\begin{figure}[htb]
-%  \begin{center}  
-%  \subfigure[TR-BDF2]{\label{fig:density_hagan_trbdf2_500_5_5}
-%  \includegraphics[width=7cm]{density_hagan_trbdf2_500_5_5.eps}}
-%  \subfigure[TR-BDF3]{\label{fig:density_hagan_trbdf3_500_5_5}
-%\includegraphics[width=7cm]{density_hagan_trbdf3_500_5.eps}}
-%   \end{center}
-%     \caption{Probability density in Hagan PDE using a total of 5 time-steps for the first 4 steps}
-%\end{figure}
-%
-%\subsection{Convergence and Performance}
+Checking the moments at every step is very useful way to validate a scheme's implementation in code. To support further validation we recorded specific values from our implementations as reference. The TR-BDF2 is using a value of $\alpha=2-\sqrt{2}$ whilst the RAN scheme is using Rannacher time-stepping for the first two full time-steps. Extrapolation methods like RE and LMG2 produce here a very low negative accumulated probability at the higher boundary: there are very small oscillations in those schemes around the higher boundary. In practice it is unlikely to matter, furthermore, they quickly converge to the true value when the number of time-steps is increased. 
 
 \end{document}
